Fixing mail accounts